# eduplanner_demo

./: .dockerignore  .gitignore  .kateproject  Dockerfile  README.md  config.py  destroy.sh  docker-compose.yml  moodle.yml  moodle.yml.schema.json  pyproject.toml  setup.sh  up.sh  users.yml
.github/workflows/: docker-image.yml
config/: courses.yml  plans.yml  slots.yml  users.yml
schema/: plans.yml.schema.json  slots.yml.schema.json  users.yml.schema.json
src/eduplanner_demo/: __main__.py  adapter_moodlecli.py  autocomplete.py  config.py  logger.py  model.py  moodleadapter.py  populate.py  schemagen.py
src/schema/: courses.yml.schema.json
